--- a/SistemaVentasBatia/ClientApp/src/app/colectivo/login/login.component.html
+++ b/SistemaVentasBatia/ClientApp/src/app/colectivo/login/login.component.html
@@ -26,7 +26,7 @@
                     <div class=" text-start card-footercss">
                         <button type="button" (click)="onLogin()" class="btn btn-primary box-shadow" isDefault="true">
                             Ingresar 
-                            <i *ngIf="isLoading" class="fa-spinner fa-spin fa-1x"></i>
+                            <i *ngIf="isLoading" class="fas fa-spinner fa-spin fa-1x"></i>
                             <i *ngIf="isLoading == false" class="fa-solid fa-right-to-bracket"></i>
                         </button>
                     </div>
@@ -35,4 +35,4 @@
         </div>
     </body>
 </div>
-<toast-widget [events]="evenSub.asObservable()" [isError]="isErr" [message]="errMessage"></toast-widget>
+<toast-widget></toast-widget>
