--- a/SistemaVentasBatia/ClientApp/src/app/exclusivo/prospecto/prospecto.component.html
+++ b/SistemaVentasBatia/ClientApp/src/app/exclusivo/prospecto/prospecto.component.html
@@ -104,3 +104,4 @@
     </div>
 </div>
 <elimina-widget [titulo]="" [mensaje]="" (ansEvent)="desactivar()"></elimina-widget>
+<toast-widget></toast-widget>
