--- a/SistemaVentasBatia/ClientApp/src/app/widgets/direccion/direccion.widget.html
+++ b/SistemaVentasBatia/ClientApp/src/app/widgets/direccion/direccion.widget.html
@@ -1,7 +1,3 @@
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-</head>
 <body>
     <div class="modal fade" id="modalAgregarDireccion" data-bs-backdrop="static">
         <div class="modal-dialog modal-lg modal-dialog-centered">
@@ -103,4 +99,4 @@
         </div>
     </div>
 </body>
-<toast-widget [events]="evenSub.asObservable()" [isError]="isErr" [message]="errMessage"></toast-widget>
+<toast-widget></toast-widget>
