--- a/SistemaVentasBatia/ClientApp/src/app/exclusivo/prospecto/nuevo/nuevo.component.html
+++ b/SistemaVentasBatia/ClientApp/src/app/exclusivo/prospecto/nuevo/nuevo.component.html
@@ -149,6 +149,7 @@
         </div>
     </div>
 </div>
+<toast-widget></toast-widget>
 <!--<direc-widget (smEvent)="recEvent($event)"></direc-widget>-->
 <!--<toast-widget [events]="evenSub.asObservable()" [isError]="isErr" [message]="validaMess"></toast-widget>-->
-<toast-widget [events]="evenSub.asObservable()" [isError]="isErr" [message]="errMessage"></toast-widget>
+<!--<toast-widget [events]="evenSub.asObservable()" [isError]="isErr" [message]="errMessage"></toast-widget>-->
