--- a/SistemaVentasBatia/ClientApp/src/app/widgets/puestolayout/puestolayout.widget.html
+++ b/SistemaVentasBatia/ClientApp/src/app/widgets/puestolayout/puestolayout.widget.html
@@ -234,6 +234,6 @@
             </div>
         </div>
     </div>
-    <toast-widget [events]="evenSub.asObservable()" [isError]="isErr" [message]="validaMess"></toast-widget>
+    <!--<toast-widget [events]="evenSub.asObservable()" [isError]="isErr" [message]="validaMess"></toast-widget>-->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-alpha1/dist/js/bootstrap.bundle.min.js"></script>
 </body>
