--- a/SistemaVentasBatia/ClientApp/src/app/exclusivo/cotizacion/nuevo/nuevo.component.html
+++ b/SistemaVentasBatia/ClientApp/src/app/exclusivo/cotizacion/nuevo/nuevo.component.html
@@ -129,6 +129,7 @@
                                     <label for="txtRFC">RFC</label>
                                 </div>
                                 <span *ngIf="ferr('Rfc')" class="text-danger">{{ terr('Rfc') }}</span>
+                                <span *ngIf="ferr('RfcLenght')" class="text-danger">{{ terr('RfcLenght') }}</span>
                             </div>
                         </div>
                         <div class="row">
