--- a/SistemaVentasBatia/ClientApp/src/app/widgets/puesto/puesto.widget.html
+++ b/SistemaVentasBatia/ClientApp/src/app/widgets/puesto/puesto.widget.html
@@ -1,5 +1,4 @@
-﻿
-<body>
+﻿<body>
     <div class="modal fade" id="modalAgregarOperario" data-bs-backdrop="static">
         <div class="modal-dialog modal-lg modal-dialog-centered">
             <div class="modal-content">
@@ -102,13 +101,6 @@
                                 </div>
                                 <span *ngIf="ferr('DiaDescanso')" class="text-danger">{{ terr('DiaDescanso') }}</span>
                             </div>
-
-
-
-
-
-
-
                             <div class="col-sm-12 col-md-3 col-6 mb-3">
                                 <div class="form-floating">
                                     <select class="form-select" aria-label="DiaInicio" [(ngModel)]="model.diaInicioFin" id="ddlDiaInicioFinPuesto">
@@ -117,7 +109,6 @@
                                     </select>
                                     <label for="ddlDiaInicioPuesto">Dia Inicio</label>
                                 </div>
-                                <!--<span *ngIf="ferr('DiaInicio')" class="text-danger">{{ terr('DiaInicio') }}</span>-->
                             </div>
                             <div class="col-sm-12 col-md-3 col-6 mb-3">
                                 <div class="form-floating">
@@ -127,7 +118,6 @@
                                     </select>
                                     <label for="ddlDiaFinPuesto">Dia Fin</label>
                                 </div>
-                                <!--<span *ngIf="ferr('DiaFin')" class="text-danger">{{ terr('DiaFin') }}</span>-->
                             </div>
                             <div class="col-sm-12 col-md-2 col-4 mb-3">
                                 <div class="form-floating">
@@ -137,7 +127,6 @@
                                     </select>
                                     <label for="ddlHrInicioPuesto">De</label>
                                 </div>
-                                <!--<span *ngIf="ferr('HrInicio')" class="text-danger">{{ terr('HrInicio') }}</span>-->
                             </div>
                             <div class="col-sm-12 col-md-2 col-4 mb-3">
                                 <div class="form-floating">
@@ -147,19 +136,7 @@
                                     </select>
                                     <label for="ddlHrFinPuesto">A</label>
                                 </div>
-                                <!--<span *ngIf="ferr('HrFin')" class="text-danger">{{ terr('HrFin') }}</span>-->
                             </div>
-
-
-
-
-
-
-
-
-
-
-
                             <br />
                             <h5>Sueldo</h5>
                             <hr />
