--- a/SistemaVentasBatia/ClientApp/src/app/widgets/producto/producto.widget.html
+++ b/SistemaVentasBatia/ClientApp/src/app/widgets/producto/producto.widget.html
@@ -67,3 +67,4 @@
     </div>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-alpha1/dist/js/bootstrap.bundle.min.js"></script>
 </body>
+<toast-widget></toast-widget>
