Ajuste directorios, prospecto, dashboard

--- a/SistemaVentasBatia/ClientApp/src/app/exclusivo/cotizacion/resumen/resumen.component.html
+++ b/SistemaVentasBatia/ClientApp/src/app/exclusivo/cotizacion/resumen/resumen.component.html
@@ -375,7 +375,7 @@
                     <span *ngIf="ferr('SLidDireccion')" class="text-danger">{{ terr('SLidDireccion') }}</span>
                 </div>
                 <div class="col-1 col-sm-12 col-md-2">
-                    <button type="button" (click)="addDir()" class="btn btn-lg btn-outline-success"><i class="fa-solid fa-plus"></i></button>
+                    <button type="button" (click)="addDir(1)" class="btn btn-lg btn-outline-success"><i class="fa-solid fa-plus"></i></button>
                 </div>
 
                 <div class="col-7 col-sm-12 col-md-6 text-end ">
